--- a/scss/introduce.scss
+++ b/scss/introduce.scss
@@ -24,6 +24,21 @@
 			}
 		}
 	}
+	.yellow-title{
+		margin-left: 10px;
+		text-align: left;
+		color: #ffa800;
+		font-size: 20px;
+		height: 30px;
+		font-weight: bold;
+	}
+	.yellow-point-title{
+		text-align: center;
+		color: #ffa800;
+		font-size: 30px;
+		font-weight: bold;
+		height: 40px;
+	}
 }
 .introduce-card{
 	ion-list{
