--- a/www/templates/introduce.html
+++ b/www/templates/introduce.html
@@ -32,6 +32,12 @@
 			</div>
 		</span>
 	</div>
+	<div class="yellow-title">
+		100000Pで、、、
+	</div>
+	<div class="yellow-point-title">
+		特別番組を放送！
+	</div>
 </div>
 <div class="introduce-card card">
 	<ion-list>
