--- a/www/templates/ticket.html
+++ b/www/templates/ticket.html
@@ -6,11 +6,11 @@
 				5000人のユーザーが応援しています
 			</div>
 			<div class="product-name">
-				王様ブランチ応援チケット
+				{{$ctrl.program.name}}応援チケット
 			</div>
 			<div class="point-price item item-input">
 				<img class="d-point-icon" src="img/d-point.png">
-				320
+				{{$ctrl.program.now_price}}
 			</div>
 		</ion-item>
 		<ion-item class="ticket-count">
