--- a/scss/introduce.scss
+++ b/scss/introduce.scss
@@ -49,6 +49,10 @@
 				font-weight: bold;
 				font-size: 30px;
 				line-height: normal;
+				white-space: normal;
+			}
+			.cast-list{
+				white-space: normal;
 			}
 			&.dot-thumbnail{
 				padding-left: 66px;
