--- a/scss/ticket.scss
+++ b/scss/ticket.scss
@@ -7,6 +7,9 @@
 			color: red;
 			white-space: normal;
 		}
+		.product-name{
+			white-space: normal;
+		}
 		.point-price{
 			.d-point-icon{
 				width: 40px;
