--- a/scss/privilage.scss
+++ b/scss/privilage.scss
@@ -21,6 +21,13 @@
 			}
 		}
 	}
+	.point-title{
+		button{
+			margin: 10px auto;
+			display: block;
+			width: 80%;
+		}
+	}
 	.content-title{
 		color: #FF4500;
 		font-size: 25px;
