--- a/www/templates/timeline.html
+++ b/www/templates/timeline.html
@@ -13,11 +13,11 @@
 			</ticket>
 		</div>
 		<div class="program-detail-content" ng-if="selectedIndex === 1">
-			<privilage>
+			<privilage program="program">
 			</privilage>
 		</div>
 		<div class="introduce-content" ng-if="selectedIndex === 2">
-			<introduce>
+			<introduce program="program" users="users" stock="stock">
 			</introduce>
 		</div>
 		</ion-scroll>
