--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -16,7 +16,7 @@
 				<img src="img/bell.png">あなたにおすすめ
 			</label>
 			<ion-scroll zooming="true" direction="x" scrollbar-x="false">
-				<img class="program-image" ng-repeat="program in programs" src="img/matuko.jpg" on-tap="goToTimeline(program.id)">
+				<img class="program-image" ng-repeat="program in programs" ng-src="{{program.image_url}}" on-tap="goToTimeline(program.id)">
 			</ion-scroll>
 		</div>
 		<ion-scroll direction="y">
@@ -24,7 +24,7 @@
 			<div class="col">
 				<div class="card" ng-repeat="program in programs" ng-if="$index % 2 == 0" on-tap="goToTimeline(program.id)">
 					<span class="program-image-area">
-						<img class="program-image" src="img/matuko.jpg">
+						<img class="program-image" ng-src="{{program.image_url}}">
 					</span>
 					<h4>
 						{{program.name}}
@@ -37,7 +37,7 @@
 			<div class="col">
 				<div class="card" ng-repeat="program in programs" ng-if="$index % 2 == 1" on-tap="goToTimeline(program.id)">
 					<span class="program-image-area">
-						<img class="program-image" src="img/suiyoubi.png">
+						<img class="program-image" ng-src="{{program.image_url}}">
 					</span>
 					<h4>
 						{{program.name}}
