--- a/www/templates/introduce.html
+++ b/www/templates/introduce.html
@@ -42,7 +42,7 @@
 <div class="introduce-card card">
 	<ion-list>
 		<ion-item class="item-thumbnail-left">
-			<img src="img/ousama.png">
+			<img ng-src="{{$ctrl.program.image_url}}">
 			<div class="program-title">
 				{{$ctrl.program.name}}
 			</div>
