--- a/www/templates/ticket.html
+++ b/www/templates/ticket.html
@@ -1,7 +1,7 @@
 <div class="ticket-area">
 	<ion-list>
 		<ion-item class="item-thumbnail-left">
-			<img src="img/ousama.png">
+			<img ng-src="{{$ctrl.program.image_url}}">
 			<div class="cheer-number">
 				5000人のユーザーが応援しています
 			</div>
