--- a/www/templates/timeline.html
+++ b/www/templates/timeline.html
@@ -9,7 +9,7 @@
 		</div>
 		<ion-scroll direction="y">
 		<div class="ticket-content" ng-if="selectedIndex === 0">
-			<ticket program="program">
+			<ticket program="program" point="point" stock="stock">
 			</ticket>
 		</div>
 		<div class="program-detail-content" ng-if="selectedIndex === 1">
