--- a/www/templates/introduce.html
+++ b/www/templates/introduce.html
@@ -51,7 +51,7 @@
 			{{$ctrl.program.name.program_info.description}}
 		</div>
 		<div class="program-image">
-			<img src="img/tanihara.png">
+			<img ng-src="{{$ctrl.program.image_url}}">
 		</div>
 		<ion-item class="item-thumbnail-left dot-thumbnail">
 			<img src="img/orange-dot.png">
